--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<!-- Main div code -->
 	<div id="main">
         <div class="h-tag">
-             <h2> Login Form</h2>
+             <h2> Login Form HTML</h2>
         </div>
         <!-- Login box -->
         <div class="login">
