--- a/index.html
+++ b/index.html
@@ -1,120 +1,51 @@
-  <!DOCTYPE html>
-  <html>
-    <head> 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Login Form Validation</title>
-    <style>
-         body
-        {
-            margin:0px;
-             background-color:#000;
-             color:#f7f7f7; 
-             font-family:Arial, Helvetica, sans-serif;
-        }
-        #main
-        {
-            width:600px;
-            height:260px;
-            margin-left:auto;
-            margin-right:auto;
-            border-radius:5px;
-            padding-left:10px;
-            margin-top:100px;
-            border-top:3px double #f1f1f1;
-            border-bottom:3px double #f1f1f1;
-            padding-top:20px;
-        }
-        #main table
-        {
-            font-family:"Comic Sans MS", cursive;
-        }  
-        #main .tb
-        {
-            height:28px; width:230px;
-            border:1px solid #ffffff; 
-            color:#000; 
-            font-weight:bold;
-            border-left:5px solid #f7f7f7; 
-            opacity:0.9;
-        } 
-        .h-tag{
-            text-align: center;
-        }
-        #main .btn
-        {
-            width:80px; 
-            height:32px;
-            outline:none;
-            font-weight:bold; 
-            border:0px solid #757575; 
-            text-shadow: 0px 0.5px 0.5px #fff;	
-            border-radius: 2px; 
-            font-weight: 600;
-            color: #606060; 
-            letter-spacing: 1px; 
-            font-size:14px; 
-        }
-        
-    
-    </style>
-    </head>
+<!DOCTYPE html>
+<html lang="en" >
+	 <head>
+	<style>
 
+h2 {
+    text-align: center;
+    font-size: 30px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 15px;
+}
+
+ul {
+    max-width: 600px;
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+    background: #f2f2f2;
+    padding: 20px;
+    padding-left: 50px;
+}
+
+ul li {
+    padding: 10px;
+    list-style-type: auto;
+    position: relative;
+}
+
+ul li a {
+    font-size: 20px;
+    text-decoration: none;
+    float: left;
+}
+
+ul li span {
+    text-align: right;
+    float: right;
+}
+</style>
+	 </head>
 	<body>
-	<!-- Main div code -->
-	<div id="main">
-        <div class="h-tag">
-             <h2> Login Form HTML</h2>
-        </div>
-        <!-- Login box -->
-        <div class="login">
-            <table cellspacing="2" align="center" cellpadding="8" border="0">
-                <tr>
-                    <td>Enter User Name :</td>
-                    <td><input type="text" placeholder="Enter user name here" id="email" class="tb" /></td>
-                </tr>
-            <tr>
-                <td>Enter Password :</td>
-                <td><input type="password" placeholder="Enter Password here" id="pwd1" class="tb" /></td>
-            </tr>
-            <tr>
-            <td></td>
-            <td> 
-                <input type="submit" value="Login" class="btn" onClick="submit()" /></td>
-            </tr>
-            </table>
-        </div>
-  	 <!-- login box div ending here.. -->
-	</div>
-	<!-- Main div ending here... -->
-    <script>
-        function submit()
-	{
-		var uname = document.getElementById("email").value;
-		var pwd = document.getElementById("pwd1").value;
-		var pattern = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-		if(uname =='')
-		{
-			alert("please enter user name.");
-		}
-		else if(pwd=='')
-		{
-        	alert("enter the password");
-		}
-		else if(!pattern.test(uname))
-		{
-			alert("Enter valid email id.");
-		}
-		else if(pwd.length < 6 || pwd.length > 24)
-		{
-			alert("Password min 6 and max length is 24.");
-		}
-		else
-		{
-	        alert('Thank You for Login'); 
-		}
-	} 	
-	
-    </script>
-  </body>
-  </html>
+		<h2>Assignments List Dec</h2>
+		<ul>
+		<li><a href="./task1/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task2/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task3/index.html">Godavgg</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task4/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
+		
+		</ul>
+	</body>
+</html>
