--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ ul li span {
 	<body>
 		<h2>Assignments List Dec</h2>
 		<ul>
-		<li><a href="./task1/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
-		<li><a href="./task2/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
-		<li><a href="./task3/index.html">Godavgg</a> <span class="date">Date : 12/10/2021</span></li>
-		<li><a href="./task4/index.html">Godavari</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task1/index.html">HTML Simle Layout</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task2/index.html">Vidarbha Irrigation Layout</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task3/index.html">Godawari Irrigation Layout</a> <span class="date">Date : 12/10/2021</span></li>
+		<li><a href="./task4/index.html">Vertical Navbar Layout</a> <span class="date">Date : 12/10/2021</span></li>
 		
 		</ul>
 	</body>
