--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ul li span {
 		<li><a href="./task2/index.html">Vidarbha Irrigation Layout</a>  </li>
 		<li><a href="./task3/index.html">Godawari Irrigation Layout</a>  </li>
 		<li><a href="./task4/index.html">Vertical Navbars Layout</a>  </li>
-		
+		<li><a href="./task5/index.html">Vertical Navbars Layout</a>  </li>
 		</ul>
 	</body>
 </html>
