--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@ ul li span {
 	<body>
 		<h2>Assignments List Dec</h2>
 		<ul>
-		<li><a href="./task1/index.html">HTML Simle Layout</a>  </li>
+		<li><a href="./task1/index.html">HTML Simple Layout</a>  </li>
 		<li><a href="./task2/index.html">Vidarbha Irrigation Layout</a>  </li>
 		<li><a href="./task3/index.html">Godawari Irrigation Layout</a>  </li>
 		<li><a href="./task4/index.html">Vertical Navbars Layout</a>  </li>
 		<li><a href="./task5/index.html">Bank Service</a>  </li>
+		<li><a href="./task6/index.html">Booket Layout</a>  </li>
+		<li><a href="./task7/index.html">Booket Landing Page</a>  </li>
 		</ul>
 	</body>
 </html>
